_sass/layouts/blog.scss
body.post {
  background: #E7E8EA;

  div.post-page {
    max-width: 900px;
    margin: 0 auto;

    h1, h2, h3, h4, h5, h6, p, small, strong, em,
    table tr th, table tr td, li, i, dt, .title, .paragraph, .footnote, b {
      color: #0D1C2C;
      @media only screen and (max-width: 768px) {
        word-wrap: break-word;
      }
    }
    h1 {
      margin-top: 20px;
    }
    .note, .colist {
      overflow: auto;
    }
    .post-date {
      color: rgb(108, 109, 110);
      text-align: left;
      font-size: 1rem;
    }
    .headshot {
      max-width: 3rem;
      margin-right: 1rem;
    }
    a {
      color: $link-light-bg;
      &:hover, &:active, &:focus {
        color: $link-hover;
      }
    }
  }
}
.blog-page {
  max-width: 900px;
  margin: 0 auto;
  
  .blog-list-item {
    margin-bottom: 3rem;
    &::after {
      content: "";
      display: block;
      border-bottom: 1px solid #E7E8EA;
      height: 3rem;
      grid-column: 6 / span 2;
    }
    p {
      margin: 0;
    }
    .read-more {
      text-align: left;
    }
    .headshot {
      max-width: 2rem;
      margin-right: .5rem;
    }
    .post-date {
      color: #E7E8EA;
      font-size: 0.8rem;
      text-align: left;
    }
    .post-title {
      a {
        font-size: 1.8rem;
        line-height: 2.1rem;
        text-decoration: none;
      }
    }
  }
  .fa-rss-square {
    font-size: 2rem;
    color: #ee802f;
    float: right;
    &:hover {
      color: darken( #ee802f, 10%);
    }
  }
}

.blog-page, .post-page {
  p.byline {
    font-size: 1rem;
  }

  .byline-wrapper {
    display: flex;
    align-items:center;
  }
  .headshot, .byline {
    display: inline;
  }
  .share-page {
    text-align: right;
  }
  small {
    font-size: 14px;
  }
}

.post-page {
  .byline-wrapper {
    p {
      margin: 0;
    }
  }
  .customer-logo {
    text-align: center;
  }
}

@media screen and (max-width: $breakpoint-m) {
  .blog-list-item .share-page {
    text-align: left;
  }
  .blog-page p.byline {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}
.blog-page,
.post-page {
  padding-bottom: 6rem;
}

